[package]
name = "actix-start"
version = "0.1.0"
authors = ["Collins Muriuki <murerwacollins@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3"
env_logger = "0.7.1"
serde = "1.0.116"
serde_json = "1.0.57"
futures = "0.3.5"
